tests/invalid/invalid-006.inox
Module Invalid006

Main() :
    break
;
